--- a/user-settings.html
+++ b/user-settings.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="bg-orange-600 p-4">
         <div class=" mx-auto flex justify-between items-center">
-            <h1 class="text-white text-2xl font-bold">Payroll System - User</h1>
+            <h1 class="text-white text-2xl font-bold">Payroll System</h1>
             <a href="user-dashboard.html" class="bg-white text-orange-600 px-4 py-2 rounded hover:bg-orange-200 transition">Dashboard</a>
         </div>
     </nav>
